Changelog
=========

1.22-dev - (unreleased)
-----------------------

1.21 - (2010-10-29)
-------------------
 * Change: now using new API for _get_random from eea.versions [tiberich #3758]
 * Change: on assessment state change, make the assessment discussable [tiberich #3791]

1.20 - (2010-10-25)
-------------------
 * Change: On reassign_version also assign new versions to all assessment
   group of that Specification [tiberich #3790]

1.19 - (2010-10-25)
-------------------
 * Move readiness warning icon in front of text in @@ims_timeline [tiberich]

1.18 - (2010-10-21)
-------------------
 * Bug fix: added document_byline macro to assessment view [tiberich #3771]

1.17 - (2010-10-20)
-------------------
 * Change: changed Specification.has_unique_code in Specification.has_duplicated_code
 * Featured: Added view @@ims_wrong_specification_versions page [tiberich #3775]

1.16 - (2010-10-18)
-------------------
 * Change: Cleaned source code of agx generated structures [tiberich]
 * Feature: redirect to parent assessment when visiting an AssessmentPart [tiberich #3761]

1.15 - (2010-10-15)
-------------------
 * Bug fix: add a missing import [tiberich]

1.14 - (2010-10-14)
-------------------
 * Bug fix: change tests to hardcode less info about Specifications schema [tiberich]
 * Feature: add @@ims_wrong_assessment_versions page [tiberich #3753]
 * Feature: add readiness check that the assessments have the right version id [tiberich #3753]
 * Bug fix: Add IndicatorFactSheets to ims_timeline and ims_overview [tiberich #3754]
 * Change: Change the way H1 headers are get their icons in stylesheet and templates [tiberich]

1.13 - (2010-10-08)
-------------------
 * Bug fix: Uncomment comment in assign_version that was providing IVersionEnhanced for specs;
 Make assessments provide IVersionEnhanced when specification gets a new version reassigned [tiberich #3650]

1.12 - (2010-10-07)
-------------------