@@ -33,7 +33,7 @@ from eea.indicators.content.utils import get_dgf_value
 from eea.relations.field import EEAReferenceField
 from eea.relations.widget import EEAReferenceBrowserWidget
 from eea.versions.interfaces import IVersionControl, IVersionEnhanced
-from eea.versions.versions import has_versions, get_versions_api
+from eea.versions.versions import isVersionEnhanced, get_versions_api
 from eea.workflow.interfaces import IHasMandatoryWorkflowFields, IObjectReadiness
 from zope.interface import alsoProvides, implements
 import datetime
@@ -645,7 +645,7 @@ class Specification(ATFolder, ThemeTaggable,  ModalFieldEditableAware,
         versions = get_versions_api(self)
         newest = versions.newest()
 
-        if has_versions(self) and newest:
+        if isVersionEnhanced(self) and newest:
             return True
         return False
 
